# Dmg-Converter

./: .gitignore  CMakeLists.txt  README.md  app.rc  build.bat  dmg-converter.cpp  dmg-converter.h  gui.cpp  main.cpp  make_icon.py
.github/workflows/: release.yml
